c/src/test/resources/c/test/nec_bnc/valid/inf8a.ctrl
<controlFile>
  <sourceFile name="../inf8.c" id="1" />
  <run>
    <startPosition fileId="1" line="2" />
    <wayPoint fileId="1" line="6" /> <!-- c = 0 || b = 0, triag = 1 -->
    <wayPoint fileId="1" line="12" /> <!-- a = 1, b = 0, c = 0, d = 1, id = 1, ltriag = 1, utriag = 1-->
    <wayPoint fileId="1" line="30" >
      <command>
	<cascadeFunction>cascade_check</cascadeFunction>
	<argument><![CDATA[
	id != 0 || ltriag != 0 || utraig != 0
	]]>
	</argument>
      </command>
    </wayPoint>
    <wayPoint fileId="1" line="34" >
      <command>
	<cascadeFunction>cascade_check</cascadeFunction>
	<argument><![CDATA[
	c == 0 && b == 0
	]]>
	</argument>
      </command>
    </wayPoint>
    <wayPoint fileId="1" line="35" >
      <command>
	<cascadeFunction>cascade_check</cascadeFunction>
	<argument><![CDATA[
	unknown > 0 || triag > 0
	]]>
	</argument>
      </command>
    </wayPoint>
    <endPosition fileId="1" line="36" />
  </run>
</controlFile>
