c/src/test/resources/c/test/nec_bnc/invalid/ex13.ctrl
<controlFile>
  <sourceFile name="../ex13.c" id="1" />
  <run>
    <startPosition fileId="1" line="2" />
    <wayPoint fileId="1" line="6" >
      <command>
	<cascadeFunction> cascade_check </cascadeFunction>
	<argument><![CDATA[
	valid(&a[x%32])
	]]>
	</argument>
      </command>
    </wayPoint>
    <endPosition fileId="1" line="7" />
  </run>
</controlFile>
